# elaborador

./: .gitignore  README.md  main.py  pyproject.toml
src/core/: elaborador.py  main.py
src/db/: db_controler.py  models.py  paswords.py
src/functions/: digitalize.py  locker.py
src/pages/home/: Home.py  functions.py
src/relations/: functions.py
